# commandlinechat

./: .gitignore  CMakeLists.txt  README.md  functions.cpp  functions.h  inputParse.cpp  json.txt  main.cpp  makefile  new.cpp  testingCURL.cbp  testingCURL.depend  testingCURL.layout  token
include/: CMakeLists.txt  functions.h  functions.hpp
node server/: main.js  package-lock.json  tmp.js
resources/: tmp.cpp
src/: CMakeLists.txt  create.cpp  functions.cpp  getMessages.cpp  inputParse.cpp  login.cpp  ping.cpp  sendMessage.cpp
util/: CMakeLists.txt  getToken.cpp
